Prepare 2016-10-24-Powel.md for review
- Change all image paths to match
- First pass on header levels
- Add initial comment to the document
- Add reference to author image
- Add example code for SOLID principles in action
- Add missing image comments
- Re-word some of the sections from passive to active form

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -1,6 +1,20 @@
-# Learnings from a DevOps Hack fest with Powel
+---
+layout: post
+title:  "Learnings from a DevOps Hackfest with Powel"
+author: "Pedro Dias"
+author-link: "#"
+#author-image: "{{ site.baseurl }}/images/authors/pedrodias.jpg"
+date:   2016-10-24
+categories: DevOps
+color: "blue"
+#image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
+excerpt: Microsoft worked with Powel to establish DevOps practices.
+language: English
+verticals: [Energy, Public Sector]
+---
+# Learnings from a DevOps Hackfest with Powel
 
-![test](./images/frontpage.png)
+![SmartWater screenshot showing water leakage information]({{site.baseUrl}}/images/Powel/frontpage.png)
 
 ## Introduction
 In this DevOps Hack fest, Microsoft teamed up with Powel to hack a brand -new
@@ -23,27 +37,19 @@ Additionally, the team expressed a need for getting hands-on experience with:
 During the Hackfest, we implemented the following practices:
 
 -   Created a multi-team project with work flowing from one team to the next
--   Use of Slack as a collaboration tool between departments
--   Set up a MicroService approach to deliver software updates in a “fast ring”
-    style
--   Defined acceptance criteria according to the ISO standards for software
-    quality
--   Used the SDL and the Microsoft Threat Modelling tool to assess security
-    risks early
--   Architected the code using a Domain-Driven Design principles
--   Selected a long-lived feature branching strategy, using Git for Source
-    Control
+-   MicroService approach to deliver software updates in a “fast ring” style without downtime
+-   Defined acceptance criteria according to the ISO standards for software quality
+-   Used the SDL and the Microsoft Threat Modelling tool to assess security risks early
+-   Architected the code using a Domain-Driven Design principles (DDD)
+-   Long-lived feature branching strategy, using Git as Source Control
 -   Adhered to the SOLID principles of object oriented design
--   Developed code using a Test-Driven approach
--   Set up an automated build & Test pipeline for each component in the solution
-    (Continuous Integration)
--   Set up an automated release pipeline for testing and QA (Continuous
-    Deployment)
--   Did targeted A/B testing based on tenant preference (each tenant opts-in to
-    join a “fast ring” deployment)
+-   Developed code using a Test-Driven approach (TDD)
+-   Set up an automated build & Test pipeline for each component in the solution (CI)    
+-   Release Management (CD+RM)
+-   A/B testing based on an opt-in policy  
 -   Expecting to monitor running applications using Application Insights
--   Able to provision an entirely new Resource Group and apply that in a new /
-    other resource group
+-   Infrastructure as Code 
+-   Use of Slack as a collaboration tool between departments
 
 We worked long and hard during every day of the Hackfest. Everyone was
 high-spirited and excited about the work, and once Friday afternoon came, we had
@@ -53,22 +59,22 @@ Application and output from the Machine Learning algorithm.
 ## Hackfest members
 
 
-| Company   | Participant         | Role                         | Twitter                                         |
-| -------   | -----------         | ----                         | -------                                         |
-| Powel     | Atle Vaaland        | Project Lead                 | [AtleVaa](http://twitter.com/AtleVaa)           | 
-|           | Frøydis Sjøvold     | Domain expert, water         |                                                 | 
-|           | Magnus Sæther       | Concept Designer             |                                                 |
-|           | Jarle Skahjem       | Developer & Security Champ   | [J_Skahjem](http://twitter.com/J_Skahjem)       | 
-|           | Hans Ruyne Bergheim | Developer                    | [hansbergheim](http://twitter.com/hansbergheim) | 
-|           | Henning Mæland      | Developer                    |                                                 |
-| BEKK      | Eivind Sorteberg    | Developer, ML, IoT Ingestion |                                                 |
-| Microsoft | Pedro Dias          | Technical Evangelist         | [digitaldias](http://twitter.com/digitaldias)   | 
-|           | Olav Tollefsen      | Technical Evangelist         | [olavtoll](http://twitter.com/olavtoll)         | 
+| Company   | Participant         | Role                         | Twitter                                          |
+| -------   | -----------         | ----                         | -------                                          |
+| Powel     | Atle Vaaland        | Project Lead                 | [AtleVaa](http://twitter.com/AtleVaa)            | 
+|           | Frøydis Sjøvold     | Domain expert, water         |                                                  | 
+|           | Magnus Sæther       | Concept Designer             |                                                  |
+|           | Jarle Skahjem       | Developer & Security Champ   | [J_Skahjem](http://twitter.com/J_Skahjem)        | 
+|           | Hans Ruyne Bergheim | Developer                    | [hansbergheim](http://twitter.com/hansbergheim)  | 
+|           | Henning Mæland      | Developer                    | [henningmaland](http://twitter.com/henningmaland)|
+| BEKK      | Eivind Sorteberg    | Developer, ML, IoT Ingestion | [sorteberg](http://twitter.com/sorteberg)        |
+| Microsoft | Pedro Dias          | Technical Evangelist         | [digitaldias](http://twitter.com/digitaldias)    | 
+|           | Olav Tollefsen      | Technical Evangelist         | [olavtoll](http://twitter.com/olavtoll)          | 
 
 
 
-Customer P­rofile
------------------
+## Customer P­rofile
+
 
 [Powel](http://www.powel.com/) spans Europe with a broad and sustainable customer base and a long history
 as trusted supplier of software solutions for cities / municipalities, counties,
@@ -76,8 +82,8 @@ the energy industry, as well as the contracting sector. Ca USD 50M revenue and
 400 employees. The company has offices across Norway as well as in Sweden,
 Denmark, Switzerland, Chile, Turkey and Poland.
 
-Focus of the Hackfest
----------------------
+## Focus of the Hackfest
+
 
 Powel is investing in a brand new, born-in-the-cloud solution for monitoring
 water in municipalities (Smart Water for Smart Cities). Undetected /
@@ -88,13 +94,13 @@ hub and analyze usage data to detect and predict maintenance issues. Detecting
 water leaks and dynamically controlling water pressure throughout zones in
 cities are the end goals of the product.
 
-![The team hacking](./images/teamHacking.jpg)
+![The team hacking]({{site.baseUrl}}/images/Powel/teamHacking.jpg)
 
 **Image:** *Deeply focused team* 
 
 
-Problem Statement
-=================
+## Problem Statement
+
 
 Powel used a mix of older and newer tools and methods for source control,
 quality control, tracking work and communication and deployment. Products
@@ -129,33 +135,29 @@ down which areas to improve and what to deliver, and then proceeded to just do
 it!
 
 ### Value Stream Mapping Team
-
-
 The Value Stream Mapping process (VSM) included the following people
 
-| Company   | Name                  | Role                               | Twitter                                       |
-| -------   | ----                  | ----                               | -------                                       | 
-| Powel     | Atle Vaaland          | Project Lead                       | [AtleVaa](http://twitter.com/AtleVaa)         | 
+| Company   | Name                  | Role                               | Twitter                                           |
+| -------   | ----                  | ----                               | -------                                           | 
+| Powel     | Atle Vaaland          | Project Lead                       | [AtleVaa](http://twitter.com/AtleVaa)             | 
 |           | Frøydis Sjøvold       | Domain expert, water               |  |
 |           | Hand-Tore Hetland     | Stand-in for Atle Vaaland on day 1 |  |  
 |           | Kevin Gjerstad        | (future) CTO of Powel              |  |
 |           | Tore Vestues          | Head of R&D                        |  |
-|           | Jarle Skahjem         | Developer / Ops                    | [J_Skahjem](http://twitter.com/J_Skahjem) | 
+|           | Jarle Skahjem         | Developer / Ops                    | [J_Skahjem](http://twitter.com/J_Skahjem)         | 
 |           | Per Harald Kristensen | Operations Lead                    |  |
-|           | Henning Mæland        | Developer                          |  |
-| Microsoft | Pedro Dias            | Technical Evangelist               | [digitaldias](http://twitter.com/digitaldias) | 
+|           | Henning Mæland        | Developer                          | [henningmaland](http://twitter.com/henningmaland) |
+| Microsoft | Pedro Dias            | Technical Evangelist               | [digitaldias](http://twitter.com/digitaldias)     | 
 
 
 
 ### Current Value Stream
-
-
 In our initial Value Stream Mapping session (VSM) the Hack fest team discussed
 the overall process, from feature definition to design, application development
 cycle, technologies used, and routines for handing off from one stage to the
 next.
 
-![Value Stream Map of current development process done by the team](./images/e1fa47e4dcf290a731a46199c448da26.jpg) 
+![Value Stream Map of current development process done by the team]({{site.baseUrl}}/images/Powel/e1fa47e4dcf290a731a46199c448da26.jpg) 
 
 *Image: Value Stream Map of current development process done by the team*
 
@@ -163,7 +165,7 @@ Because it is a completely new solution to be defined, we did not have an MVP
 (Minimum Viable Product) yet defined, so we decided to focus on the team’s
 existing development process and discussed ways to improve that.
  
- ![Value Stream Map, Current State](./images/vsm_current.png)
+ ![Value Stream Map, Current State]({{site.baseUrl}}/images/Powel/vsm_current.png)
 
 **Diagram:** *Value Stream Map, Current State*
 
@@ -191,13 +193,13 @@ Having spent most of the time discussing and learning about Powel’s current
 software development process, we proceeded to design a “perfect” future state
 Value Stream.
 
-![Whiteboard image of future state](images/70a9acda431da505414957b2d0247c48.jpg)
+![Whiteboard image of future state]({{site.baseUrl}}/images/Powel/70a9acda431da505414957b2d0247c48.jpg)
 
 Because *SmartWater* is a greenfield project, the decision to scrap the current
 way of development in favor a complete redesign addresses the central points of
 concern gave the following map:
 
-![Future State Value Stream map](./images/vsm_future.png)
+![Future State Value Stream map]({{site.baseUrl}}/images/Powel/vsm_future.png)
 
 **Diagram:** *Future State Value Stream map*
 
@@ -209,7 +211,7 @@ portal that calls into various underlying APIs. The web portal, as well as each
 of the underlying APIs are each defined as epics, and detailed in features within each. 
 The idea being that future products will be able to call into these APIs.
 
-![Overall solution architecture diagram](./images/architecture.png)
+![Overall solution architecture diagram]({{site.baseUrl}}/images/Powel/architecture.png)
 
 ## Multiple Teams across departments
 
@@ -235,14 +237,13 @@ the next until it is put into general release.
 
 ### Epic Level workflow
 
-The following workflow was defined for the components at epic level:
+We defined the following workflow for the components at epic level. Since each epic represents a 
+deliverable component, the epic level items represent these component's lifetime.
 
-Each Epic contains the features that define it.
+![Epics lifecycle flow]({{site.baseUrl}}/images/Powel/epicflow.png)
 
-![](./images/epicflow.png)
-
+### Features under epics
 #### Feature definition
-
 
 The features titles are written in a style similar to [Behavior Driven
 Development](https://en.wikipedia.org/wiki/Behavior-driven_development) (BDD) where [Dan North](https://dannorth.net/about/), considered by many as the father of BDD. 
@@ -267,7 +268,7 @@ an API, it bypasses the designers, and is submitted directly to the developer te
 
 The design team carries their features across the following workflow:
 
-![](./images/designerFlow.png)
+![]({{site.baseUrl}}/images/Powel/designerFlow.png)
 
 Each feature needs an interaction design before a graphical design can be
 applied to it. Once these two design stages are done, the feature should be
@@ -297,11 +298,13 @@ process initially, but marks good practice.
 ### Developer Workflow
 The following flow helps management understand how the features are progressing.
 
-![Developer Workflow](./images/developerFlow.png)
+![Developer Workflow]({{site.baseUrl}}/images/Powel/developerFlow.png)
 
 #### Threat modelling
 Before the team starts to develop a feature, they create a threat model so that
-any security issues can be added to the final acceptance criteria list.
+any security issues can be added to the final acceptance criteria list. They do so using
+the [Microsoft SDL](https://www.microsoft.com/en-us/sdl/default.aspx), among them we demonstrated
+the [Threat Modelling tool](https://www.microsoft.com/en-us/sdl/adopt/threatmodeling.aspx)
 
 #### Planning session and User Story creation
 Before developers start working on a feature, they have a planning session where
@@ -364,10 +367,11 @@ well as the domain that is common to all. This made a clean *[separation of
 concerns](https://en.wikipedia.org/wiki/Separation_of_concerns)* and organized the projects cleanly, allowing different developers to
 do work in separate levels of the same feature.
 
-![SettingsApi organized in a DDD structure](images/d97c35121cf570a3449c70677f36d25a.png)
+![SettingsApi organized in a DDD structure]({{site.baseUrl}}/images/Powel/d97c35121cf570a3449c70677f36d25a.png)
 
   
 **Image:** *SettingsApi organized in a DDD structure*
+
 
 ### SOLID Principles of object oriented design
 
@@ -385,6 +389,35 @@ were:
     banned. All depencencies are resolved using an IoC Container. Otherwise,
     Test-driven approaches are impossible.
 
+````csharp
+    public class TenantManager : ITenantManager
+    {
+        private readonly IExceptionHandler _exceptionHandler;
+        private readonly ITenantReader     _tenantReader;
+        private readonly ITenantValidator  _tenantValidator;
+
+        public TenantManager(ITenantValidator tenantValidator, ITenantReader tenantReader, IExceptionHandler exceptionHandler)
+        {
+            _tenantValidator  = tenantValidator;
+            _tenantReader     = tenantReader;
+            _exceptionHandler = exceptionHandler;
+        }
+
+
+        public async Task<Tenant> GetByIdAsync(string tenantId)
+        {
+            if (!_tenantValidator.Validate(tenantId).Passed)
+                return null;
+
+            return await _exceptionHandler.GetAsync(() => _tenantReader.GetByIdAsync(tenantId));
+        }
+    }
+````
+**Code:** The Single Responsibility Principle dictates that each class must only have a single reason to change. In the example above, a *tenantManager*s sole purpose
+is to orchestrate the process of retrieving a *Tenant* object. In the example, this means validating the parameter and doing a central exception handling
+around the call to the object that handles the IO operation. Validation, ExceptionHandling, and Reading are NOT part of it's responsbilities, so these are injected using the 
+Dependency Inversion Principle (DIP), thus the *only* reason for doing a modification to this code is if the process itself requires a change (i.e. by introduing a log step).
+
 ### Source Control
 
 We selected a “long-lived feature branch” source control strategy. Each product
@@ -396,7 +429,7 @@ environment where the product is immediately available for testing. Once a
 feature is deemed OK for general release, it is merged onto the master branch,
 but the branch itself lives on for further development.
 
-![Conceptual overview of the branches in the solution](./images/branches.png)
+![Conceptual overview of the branches in the solution]({{site.baseUrl}}/images/Powel/branches.png)
 
 **Image**: *Conceptual overview of the branches in the solution*
 
@@ -417,13 +450,9 @@ but the branch itself lives on for further development.
 We adopted a strategy for writing commit messages that aims to completes the
 following sentence with each commit:
 
-*If this commit is applied, it will….***\<message\>**
+*If this commit is applied, it will….***\<commit message describing the intent of the commit\>**
 
-This makes it easy to see the value-increase of each commit. The commit message
-never explains *what* has been delivered, but rather what the change represents
-to the product, and why it was necessary
-
-Sample commit messages from an API branch:
+This made it easy to see the value-increase of each commit:
 
 ```git
 8b8d955 Add a leakage zone polygon mapper
@@ -435,6 +464,9 @@ e49a077 Update the API to wrap the results in DataResult
 a1c1877 Rename IsValid() to Validate()
 caba32d Add tenantVerifier and dateVerifier
 ```
+**Why:** The team was used to writing commit messages like "Added XX" or "Adjusted YY" which is already apparent 
+in the code changes and did not bring any value to a person doing QA. With this approach, it is now plain to everyone
+what the value added is. They can read (bottom up) how the product grows.
 
 ## Test Automation
 We built the applications using a TDD approach, writing Unit-Tests for each bit
@@ -488,7 +520,7 @@ everyone instantly adopted:
 Developing code using TDD gave us the benefit of not needing to start up a full-running system in order to
 try out a local change. Short Unit-Test will immediately confirm a theory, and uncover breaking changes in other areas of the code.
 
-![Test-driven approach gives early warnings of breaking changes and help see which libraries are covered by tests.](images/3003663e3c2a86a4fd6031e615f6cec3.png)  
+![Test-driven approach gives early warnings of breaking changes and help see which libraries are covered by tests.]({{site.baseUrl}}/images/Powel/3003663e3c2a86a4fd6031e615f6cec3.png)  
 
 **Image:** *Test-driven approach gives early warnings of breaking changes and
 help see which libraries are covered by tests.*
@@ -560,14 +592,16 @@ as load testing and usability testing.
 
 
 After the Hackfest, Powel is now able to plan, design, develop and a release a
-new feature within days. New features are estimated to have an average lead time
-of 34 days or less, which a significant improvement to %C&A. This is basically
-twice the current speed, and we are expecting the lead time to drop even further
-as everyone starts getting into “the flow”.
+new feature within days. Minor changes and fixes can be put into productionin minutes!
 
-With VSTS, project stakeholders can follow a feature as it goes through each of
+We estimated an average feature to have an average lead time of 34 days or less, which 
+a significant improvement to %C&A. This is twice the current team speed, and we expect the lead 
+time to drop even further as everyone starts getting into “the flow”.
+
+With VSTS, each project stakeholder can now follow a feature as it flows through each of
 the teams and into production, gaining insight into their development process
-and adjusting as they go.
+and adjusting as they go. With the VSTS build and release system hooked into Slack, everyone 
+will see a notification when something new is released.
 
 Adding acceptance criteria and considering security *before* a feature is
 developed add up to a workflow with a much higer %C&A, as developers can see the
@@ -575,4 +609,6 @@ requirements and meet them at once.
 
 The developers adopted modern styles of software development forming the basis
 of a healthy codebase that is easy to maintain, and easy to understand for new
-developers joining the team.
+developers joining the team. The SOLID form, combined with DDD and TDD, makes the grounds 
+for a SmartWater that can grow in complexity, but never drops in it's simplicity. 
+
