Add images and text from VSTS Build and Release

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -253,7 +253,11 @@ The idea is that a feature title should reflect the final outcome of said featur
 
 This ubiqutos style gives everyone a very clear understanding of the feature just by looking at the title. 
 Once the feature is pushed into prodution, a simple query in VSTS delivers a list of features that are in production. This way
-everyone sees what the released product now can do.
+everyone sees what the released product now can do
+
+![VSTS Showing features released]({{site.baseUrl}}/images/Powel/releaseExampleSettingsApi.png)
+
+**Image:** *SettingsApi Epic has its own release, in which all features changed are shown* 
 
 #### Feature creation
 Features are created in a brainstorming session with marketing, designers,
@@ -533,6 +537,12 @@ Unit-tests.
 >**NOTE:** Load testing will be implemented once the team has sorted out an AD
 tenant to use in the CI-environment.
 
+#### Continuous Integration
+Having all the unit-tests run during a bulid stage in VSTS means we can stop the code from going into production if a unit-test fails.
+Unit-Tests are run continuously on each commit. 
+![Build report from VSTS]({{site.baseUrl}}/images/Powel/exampleBuildReport.png)
+
+**Image:** Build report from VSTS
 
 ## Fast Ring/ Production Deployment
 We decided to give the tenants the option to receive updates to the program in a
