very minor typo fixes edited directly prior to detailed review

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -17,7 +17,7 @@ verticals: [Energy, Public Sector]
 ![SmartWater screenshot showing water leakage information]({{site.baseUrl}}/images/Powel/frontpage.png)
 
 ## Introduction
-In this DevOps Hack fest, Microsoft teamed up with Powel to hack a brand -new
+In this DevOps Hack fest, Microsoft teamed up with Powel to hack a brand-new
 solution, **SmartWater**. We describe the process and the result here, including
 the following DevOps elements:
 
@@ -53,7 +53,7 @@ During the Hackfest, we implemented the following practices:
 
 We worked long and hard during every day of the Hackfest. Everyone was
 high-spirited and excited about the work, and once Friday afternoon came, we had
-a working proof-of-concept tying in all of the Api components with the web
+a working proof-of-concept tying in all of the API components with the web
 Application and output from the Machine Learning algorithm.
 
 ## Hackfest members
@@ -73,7 +73,7 @@ Application and output from the Machine Learning algorithm.
 
 
 
-## Customer P­rofile
+## Customer Profile
 
 
 [Powel](http://www.powel.com/) spans Europe with a broad and sustainable customer base and a long history
@@ -106,7 +106,7 @@ Powel used a mix of older and newer tools and methods for source control,
 quality control, tracking work and communication and deployment. Products
 include *GIT, Team City* and *Octopus Deploy*.
 
-The current software team has a lead time of just over 61 days on average, whit
+The current software team has a lead time of just over 61 days on average, with
 a %Q&A of 0.8% in their existing projects.
 
 The organization as a whole is divided on traditional lines (design, operations,
@@ -251,9 +251,9 @@ The idea is that a feature title should reflect the final outcome of said featur
 
 "**The SettingsApi delivers the user's setting for Fast Ring deployment**"
 
-This ubiqutos style gives everyone a very clear understanding of the feature just by looking at the title. 
-Once the feature is pushed into prodution, a simple query in VSTS delivers a list of features that are in production. This way
-everyone sees what the released product now can do
+This ubiquitous style gives everyone a very clear understanding of the feature just by looking at the title. 
+Once the feature is pushed into production, a simple query in VSTS delivers a list of features that are in production. This way
+everyone sees what the released product now can do.
 
 ![VSTS Showing features released]({{site.baseUrl}}/images/Powel/releaseExampleSettingsApi.png)
 
@@ -322,7 +322,7 @@ The operations workflow is simply Next Active Resolved (or Dismissed), as most
 of the tasks involved in operations from a feature development are short-lived.
 Operations also have the responsibility of monitoring a feature in production
 environments, but that kind of operations does not have a development approach
-and will be discussed later in this document
+and will be discussed later in this document.
 
 ### Analysis Workflow
 
