--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -19,7 +19,7 @@ verticals: [Energy, Public Sector]
 ## Introduction
 In this DevOps Hackfest, Microsoft teamed up with Powel to hack a brand-new
 solution, **SmartWater**. We describe the process and the result here, including
-the following DevOps elements:
+the following DevOps practices:
 
 -   Infrastructure as Code
 -   Continuous integration / Continuous delivery
