Remove participant names

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -59,17 +59,15 @@ Application and output from the Machine Learning algorithm.
 ## Hackfest members
 
 
-| Company   | Participant         | Role                         | Twitter                                          |
-| -------   | -----------         | ----                         | -------                                          |
-| Powel     | Atle Vaaland        | Project Lead                 | [AtleVaa](http://twitter.com/AtleVaa)            | 
-|           | Frøydis Sjøvold     | Domain expert, water         |                                                  | 
-|           | Magnus Sæther       | Concept Designer             |                                                  |
-|           | Jarle Skahjem       | Developer & Security Champ   | [J_Skahjem](http://twitter.com/J_Skahjem)        | 
-|           | Hans Ruyne Bergheim | Developer                    | [hansbergheim](http://twitter.com/hansbergheim)  | 
-|           | Henning Mæland      | Developer                    | [henningmaland](http://twitter.com/henningmaland)|
-| BEKK      | Eivind Sorteberg    | Developer, ML, IoT Ingestion | [sorteberg](http://twitter.com/sorteberg)        |
-| Microsoft | Pedro Dias          | Technical Evangelist         | [digitaldias](http://twitter.com/digitaldias)    | 
-|           | Olav Tollefsen      | Technical Evangelist         | [olavtoll](http://twitter.com/olavtoll)          | 
+| Company   | Role                         |
+| -------   | ----                         |
+| Powel     | Project Lead                 | 
+|           | Domain expert, water         | 
+|           | Concept Designer             |
+|           | Developer / Security Champ   | 
+|           | Two developers               | 
+| BEKK      | ML, IoT Ingestion            |
+| Microsoft | Two Technical Evangelists    | 
 
 
 
@@ -137,17 +135,17 @@ it!
 ### Value Stream Mapping Team
 The Value Stream Mapping process (VSM) included the following people
 
-| Company   | Name                  | Role                               | Twitter                                           |
-| -------   | ----                  | ----                               | -------                                           | 
-| Powel     | Atle Vaaland          | Project Lead                       | [AtleVaa](http://twitter.com/AtleVaa)             | 
-|           | Frøydis Sjøvold       | Domain expert, water               |  |
-|           | Hand-Tore Hetland     | Stand-in for Atle Vaaland on day 1 |  |  
-|           | Kevin Gjerstad        | (future) CTO of Powel              |  |
-|           | Tore Vestues          | Head of R&D                        |  |
-|           | Jarle Skahjem         | Developer / Ops                    | [J_Skahjem](http://twitter.com/J_Skahjem)         | 
-|           | Per Harald Kristensen | Operations Lead                    |  |
-|           | Henning Mæland        | Developer                          | [henningmaland](http://twitter.com/henningmaland) |
-| Microsoft | Pedro Dias            | Technical Evangelist               | [digitaldias](http://twitter.com/digitaldias)     | 
+| Company   | Role                               |
+| -------   | ----                               | 
+| Powel     | Project Lead                       | 
+|           | Domain expert, water               |
+|           | Stand-in for Atle Vaaland on day 1 |
+|           | (future) CTO of Powel              |
+|           | Head of R&D                        |
+|           | Developer / Ops                    | 
+|           | Operations Lead                    |
+|           | Developer                          |
+| Microsoft | Technical Evangelist               | 
 
 
 
