Move future plans to a "Future Plans" Section.
Add VSM to practices covered in the introduction

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -31,25 +31,29 @@ Additionally, the team expressed a need for getting hands-on experience with:
 -   Branching strategies
 -   Security modelling
 
+The hackfest followed a few weeks after a Value Stream Map session where we were able to identify some pain points and plan for
+an improved workflow. The result was an estimated 50% reduction in lead time as well as a much higher degree of percent complete and accurate.
+
 ## Devops practices implemented
 
 
 During the Hackfest, we implemented the following practices:
 
--   Created a multi-team project with work flowing from one team to the next
--   MicroService approach to deliver software updates in a “fast ring” style without downtime
--   Defined acceptance criteria according to the ISO standards for software quality
--   Used the SDL and the Microsoft Threat Modelling tool to assess security risks early
--   Architected the code using a Domain-Driven Design principles (DDD)
--   Long-lived feature branching strategy, using Git as Source Control
--   Adhered to the SOLID principles of object oriented design
--   Developed code using a Test-Driven approach (TDD)
--   Set up an automated build & Test pipeline for each component in the solution (CI)    
--   Release Management (CD+RM)
--   A/B testing based on an opt-in policy  
--   Expecting to monitor running applications using Application Insights
--   Infrastructure as Code 
--   Use of Slack as a collaboration tool between departments
+- Underwent a Value Stream Mapping session to find areas of improvement
+- Created a multi-team project with work flowing from one team to the next
+- MicroService approach to deliver software updates in a “fast ring” style without downtime
+- Defined acceptance criteria according to the ISO standards for software quality
+- Used the SDL and the Microsoft Threat Modelling tool to assess security risks early
+- Architected the code using a Domain-Driven Design principles (DDD)
+- Long-lived feature branching strategy, using Git as Source Control
+- Adhered to the SOLID principles of object oriented design
+- Developed code using a Test-Driven approach (TDD)
+- Set up an automated build & Test pipeline for each component in the solution (CI)    
+- Release Management (CD+RM)
+- A/B testing based on an opt-in policy  
+- Expecting to monitor running applications using Application Insights
+- Infrastructure as Code 
+- Used Slack as a collaboration tool between departments
 
 We worked long and hard during every day of the Hackfest. Everyone was
 high-spirited and excited about the work, and once Friday afternoon came, we had
@@ -289,8 +293,6 @@ The acceptance criteria should include the ISO standards [IEC 9126 / IEC 25010:2
 -   Performance Efficiency
 -   Maintainability
 -   Security (Done by the developer team)
-
->**NOTE**: During the Hackfest, we did **not** have time to detail these.
 
 Once the design and acceptance criteria have been defined, the feature is placed
 in “Review” status. The idea being that senior leadership reviews the work done
@@ -568,13 +570,26 @@ if they haven’t opted in for early releases.
 Once a feature is ready for general release, the *ApiVersion* and *FastVersion*
 both point to the same values.
 
->**Note:** <br />
->We discussed, but did not land on any conclusion about how far back versions are to be maintained<br />
 
 
-## Monitoring in production with Application Insights
+
+## Future plans, going forward
+
+As in most hackfests, we did not have the time to do everything that we set out to do, so
+in this section are the items that the rest of the team committed to follow up: 
 
 
+### Ensuring all features have their acceptance criteria defined
+During the Hackfest, we did not have time to detail these, but this is marked for follow-up soon after.
+
+
+### Implementing the release strategy
+Even though we landed a strategy for a fast ring/slow ring release, we only managed to complete
+the configuration part, and still need to design a page for the user to actually set this value. Some work left on this, but 
+nothing too complicated. 
+
+
+### Monitoring in production with Application Insights
 This point was spoken of, but we didn’t have time to address it during the
 Hackfest.
 
@@ -584,8 +599,8 @@ on the promise of getting vital production data from the system in production.
 The general idea is to use Application Insights to track performance, custom
 events and to detect unforeseen problems.
 
-## Testing the product
 
+### Planned tests 
 Another follow-up is the use of Test Management capabilities in VSTS in order to
 plan and execute tests.
 
@@ -596,14 +611,13 @@ attach easily to the feature description in VSTS.
 The test plans cover both functional tests as well as non-functional tests, such
 as load testing and usability testing.
 
+
 ## Conclusion
-
-
 After the Hackfest, Powel is now able to plan, design, develop and a release a
-new feature within days. Minor changes and fixes can be put into productionin minutes!
+new feature within days. Minor changes and fixes can be put into production in minutes!
 
-We estimated an average feature to have an average lead time of 34 days or less, which 
-a significant improvement to %C&A. This is twice the current team speed, and we expect the lead 
+We estimate an average feature to have an average lead time of 34 days or less, which 
+a significant improvement to the %C&A. It is twice the current team speed, and we expect the lead 
 time to drop even further as everyone starts getting into “the flow”.
 
 With VSTS, each project stakeholder can now follow a feature as it flows through each of
@@ -613,10 +627,10 @@ will see a notification when something new is released.
 
 Adding acceptance criteria and considering security *before* a feature is
 developed add up to a workflow with a much higer %C&A, as developers can see the
-requirements and meet them at once.
+requirements and meet them at once. 
 
-The developers adopted modern styles of software development forming the basis
-of a healthy codebase that is easy to maintain, and easy to understand for new
+In order for all of this to happen, the developers adopted modern styles of software development, forming the basis
+of a healthy codebase that is easy to maintain and easy to understand for new
 developers joining the team. The SOLID form, combined with DDD and TDD, makes the grounds 
 for a SmartWater that can grow in complexity, but never drops in it's simplicity. 
 
