Shorten 'Value Stream Map' to 'VSM' from line 157 and on

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -159,17 +159,17 @@ the overall process, from feature definition to design, application development
 cycle, technologies used, and routines for handing off from one stage to the
 next.
 
-![Value Stream Map of current development process done by the team]({{site.baseUrl}}/images/Powel/e1fa47e4dcf290a731a46199c448da26.jpg) 
+![VSM of current development process done by the team]({{site.baseUrl}}/images/Powel/e1fa47e4dcf290a731a46199c448da26.jpg) 
 
-*Image: Value Stream Map of current development process done by the team*
+*Image: VSM of current development process done by the team*
 
 Because it is a completely new solution to be defined, we did not have an MVP
 (Minimum Viable Product) yet defined, so we decided to focus on the team’s
 existing development process and discussed ways to improve that.
  
- ![Value Stream Map, Current State]({{site.baseUrl}}/images/Powel/vsm_current.png)
+ ![VSM, Current State]({{site.baseUrl}}/images/Powel/vsm_current.png)
 
-**Diagram:** *Value Stream Map, Current State*
+**Diagram:** *VSM, Current State*
 
 #### Lead Time vs Processing Time
 
@@ -201,9 +201,9 @@ Because *SmartWater* is a greenfield project, the decision to scrap the current
 way of development in favor a complete redesign addresses the central points of
 concern gave the following map:
 
-![Future State Value Stream map]({{site.baseUrl}}/images/Powel/vsm_future.png)
+![Future State VSM]({{site.baseUrl}}/images/Powel/vsm_future.png)
 
-**Diagram:** *Future State Value Stream map*
+**Diagram:** *Future State VSM*
 
 ## Architecture
 
