Change main title as suggested

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -12,7 +12,7 @@ excerpt: Microsoft worked with Powel to establish DevOps practices.
 language: English
 verticals: [Energy, Public Sector]
 ---
-# Learnings from a DevOps Hackfest with Powel
+# Improving water monitoring through DevOps practices with Powel AS
 
 ![SmartWater screenshot showing water leakage information]({{site.baseUrl}}/images/Powel/frontpage.png)
 
