Add reference to SettingsApi project on GitHub

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -634,3 +634,10 @@ of a healthy codebase that is easy to maintain and easy to understand for new
 developers joining the team. The SOLID form, combined with DDD and TDD, makes the grounds 
 for a SmartWater that can grow in complexity, but never drops in it's simplicity. 
 
+## Resources
+
+See [https://github.com/digitaldias/SmartWater.SettingsApi](https://github.com/digitaldias/SmartWater.SettingsApi) for a full vertical example
+of the *SmartWater.SettingsApi*. It contains many of the principles discussed here. 
+Access keys and other secrets have been masked out, but other than that, the code is complete. 
+
+
